# hash-hunter

./: .gitignore  Cargo.toml  README.md
.github/workflows/: CI.yml  release.yml
ioc/npp/: npp_ioc.txt
src/: lib.rs  main.rs
