[package]
name = "hash-hunter"
version = "0.1.0"
edition = "2024"

[dependencies]
blake2 = "0.10"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
digest = "0.10"
hex = "0.4"
indicatif = { version = "0.17", features = ["rayon"] }
md-5 = "0.10"
rayon = "1.10"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.10"

[lints.clippy]
pedantic = "deny"
